# app/controllers/circles_controller.rb
@@ -1,4 +1,8 @@
 class CirclesController < ApplicationController
+  def index
+    render json: { circles: filtered_circles }, status: :ok
+  end
+
   def update
     circle = Circle.find(params[:id])
 
@@ -23,6 +27,35 @@ class CirclesController < ApplicationController
   end
 
   private
+
+  def filtered_circles
+    return [] unless valid_search_params?
+    
+    scope.within_area(**search_params)
+  end
+
+  def scope
+    if params[:frame_id].present?
+      Circle.where(frame_id: params[:frame_id])
+    else
+      Circle.all
+    end
+  end
+
+  def search_params
+    {
+      center_x: params[:center_x].to_f,
+      center_y: params[:center_y].to_f,
+      radius: params[:radius].to_f
+    }
+  end
+
+  def valid_search_params?
+    params[:center_x].present? && 
+    params[:center_y].present? && 
+    params[:radius].present? &&
+    params[:radius].to_f > 0
+  end
 
   def circle_params
     params.require(:circle).permit(:x, :y, :diameter)
